=== 2017-01-16
* Enhancements
  * Updated expected_element to use the global default element wait by default
  * Added *_element and *_elements methods to Druid and Element for the following types
    * addr
    * address
    * article
    * aside
    * bdi
    * bdo
    * cite
    * code
    * dd
    * dfn
    * dt
    * em
    * figcaption
    * figure
    * footer
    * header
    * hgroup
    * kbd
    * mark
    * nav
    * noscript
    * rp
    * rt
    * ruby
    * samp
    * section
    * sub
    * summary
    * sup
    * var
    * wbr
=== 2017-01-15
* Fixes
  * Fixed issue when calling new multi-element class methods using a block
=== Version 1.1.6/2017-01-13
* Enhancement
  * Added callback to initialize_accessors method during initialization
  * Added html method to Element
  * Added generated method to return text for a table
  * Added generated method to return text for an unordered list
  * Added generated method to return text for an ordered list
  * Added the following class level methods to return all elements matching the locator
    * divs
    * buttons
    * text_fields
    * hidden_fields
    * text_areas
    * select_lists
    * links
    * checkboxes
    * radio_buttons
    * spans
    * tables
    * cells
    * images
    * forms
    * list_items
    * unordered_lists
    * ordered_lists
    * h1s
    * h2s
    * h3s
    * h4s
    * h5s
    * h6s
    * paragraphs
    * labels
    * file_fields
=== 2017-01-09
* Enhancement
  * Added params class instance variable to hold hash values that can be used in the page
  * Added ability to insert ERB into page_url string and have it access params
* Fixes
  * Fixed issue when passing symbol to page_url and calling multiple times
=== 2017-01-03
* Enhancement
  * Added selected_values method to SelectList to get values of all selected elements
  * Added ability to pass classname as string to visit_page, on_page, and if_page methods
=== Version v1.1.5/ 2016-12-31
* Enhancement